# g3p-vm-gpu

./: .gitignore  AGENTS.md  README.md  TODO.md  compile_optimize.md  cpp_refactor_plan.md  structure.md  v1.0_spec.md
.codex/: config.toml
.github/workflows/: ci.yml
configs/grammar/: all.json  num_list.json  scalar.json  string.json  string_list.json
cpp/: CMakeLists.txt
cpp/include/g3pvm/: builtins.hpp  bytecode.hpp  errors.hpp  evo_ast.hpp  evolve.hpp  payload.hpp  value.hpp  value_semantics.hpp  vm_cpu.hpp  vm_gpu.hpp
cpp/include/g3pvm/cli/: codec.hpp  json.hpp  options.hpp
cpp/include/g3pvm/core/: builtin.hpp  bytecode.hpp  errors.hpp  opcode.hpp  value.hpp  value_semantics.hpp
cpp/include/g3pvm/evolution/: ast_program.hpp  compiler.hpp  crossover.hpp  evolve.hpp  genome.hpp  genome_generation.hpp  grammar_config.hpp  mutation.hpp  selection.hpp
cpp/include/g3pvm/evolution/repro/: backend.hpp  gpu.hpp  pack.hpp  prep.hpp  stats.hpp  types.hpp
cpp/include/g3pvm/runtime/: builtins.hpp  exec_cpu.hpp  execute_bytecode_cpu.hpp  fitness_gpu.hpp  payload.hpp
cpp/include/g3pvm/runtime/cpu/: builtins_cpu.hpp  fitness_cpu.hpp
cpp/include/g3pvm/runtime/gpu/: constants_gpu.hpp  device_types_gpu.hpp  fitness_gpu.hpp  host_pack.hpp  host_pack_gpu.hpp  payload_flavor_gpu.hpp  payload_flavor_types.hpp  types.hpp
cpp/include/g3pvm/runtime/payload/: payload.hpp
cpp/src/: builtins.cpp  evo_ast.cpp  evolve.cpp  evolve_cli.cpp  payload.cpp  vm_cpu.cpp  vm_cpu_cli.cpp  vm_cpu_fitness_multi_bench.cpp  vm_cpu_multi_bench.cpp  vm_gpu.cu  vm_gpu_batch_cli.cpp  vm_gpu_fitness_multi_bench.cpp  vm_gpu_multi_bench.cpp
cpp/src/bench/: runtime_multi_bench.cpp
cpp/src/cli/: codec.cpp  evolve_cli.cpp  generate_population_cli.cpp  json.cpp  options.cpp  population_bench_cli.cpp  population_bucket_cli.cpp  runtime_cli.cpp
cpp/src/evolution/: ast_program.cpp  compiler.cpp  crossover.cpp  evolve.cpp  genome.cpp  genome_generation.cpp  genome_meta.cpp  genome_meta.hpp  grammar_config.cpp  mutation.cpp  random_genome.cpp  selection.cpp  subtree_utils.cpp  subtree_utils.hpp  typed_expr_analysis.cpp  typed_expr_analysis.hpp
cpp/src/evolution/repro/: backend.cpp  gpu.cpp  pack.cpp  prep.cpp
cpp/src/evolution/repro/gpu/: arena.cu  copyback.cu  internal.hpp  launch.cu
cpp/src/evolution/repro/gpu/device/: pack_types.cuh  random_device.cuh  selection_kernels.cuh  variation_kernels.cuh
cpp/src/runtime/cpu/: builtins.cpp  builtins_cpu.cpp  exec_cpu.cpp  execute_bytecode_cpu.cpp  fitness_cpu.cpp
cpp/src/runtime/gpu/: device_arith.cuh  device_builtins.cuh  device_exec.cuh  fitness_gpu.cu  host_pack.cu  host_pack.hpp  host_pack_gpu.cu  kernels.cuh  opcode_map.cpp  opcode_map_gpu.cpp  opcode_map_gpu.hpp  types.hpp
cpp/src/runtime/gpu/device/: arith_device.cuh  builtins_device.cuh  execute_bytecode_device.cuh  kernels.cuh  kernels_device.cuh
cpp/src/runtime/payload/: payload.cpp
cpp/src/vm_cpu_cli/: codec.cpp  codec.hpp  json.cpp  options.cpp  options.hpp
cpp/src/vm_gpu/: device_arith.cuh  device_builtins.cuh  device_exec.cuh  host_pack.cu  host_pack.hpp  kernels.cuh  opcode_map.cpp  opcode_map.hpp  types.hpp
cpp/tests/: test_evo_ast.cpp  test_evolve.cpp  test_fitness_cpu_gpu_parity.cpp  test_vm_edges.cpp  test_vm_gpu_batch.cpp  test_vm_gpu_fitness.cpp  test_vm_gpu_multi_batch.cpp  test_vm_gpu_smoke.cpp  test_vm_smoke.cpp
cpp/tests/evolution/: test_evolve.cpp  test_genome.cpp  test_repro_prep.cpp
cpp/tests/gpu/: test_vm_gpu_smoke.cpp
cpp/tests/parity/: simple_exp_population_probe.cpp  test_evolution_cpu_gpu_parity.cpp  test_fitness_cpu_gpu_parity.cpp
cpp/tests/runtime/: test_vm_cli_harness.cpp  test_vm_edges.cpp  test_vm_smoke.cpp
data/fixtures/: gcd_1024.json  middle_character_1024.json  simple_affine_2x_plus_3_1024.json  simple_evo_affine_2x_plus_3_1024.json  simple_evo_exp_1024.json  simple_evo_square_x2_1024.json  simple_evo_x_plus_1_1024.json  simple_x_plus_1_1024.json  solve_boolean_1024.json  speedup_cases_bouncing_balls_1024.json
docs/: ARCHITECTURE.md  CPP_RUNTIME_PAYLOAD.md  DEVELOPMENT.md  FILE_STRUCTURE.md  GPU_REPRODUCTION.md  GRAMMAR_CONFIG.md  STRING_LIST_BUILTINS_PLAN.md  TIMING.md
draw/: draw.py
exp/: README.md  build_repro_proto_bench.sh  gpu_reproduction_idea.md  integration_instructions.md  repro_proto_bench.cu  run_current.sh  write_current_summary.py
exp/results/: cheap_validate_comparable_report.md  cheap_validate_pop1024_rerun.json  cheap_validate_pop4096.json  comparable_no_cheap_pop1024.json  comparable_no_cheap_pop4096.json  complete_summary.md  current_pop1024.json  current_pop4096.json
experiment/: experiment.md
logs/all_fixtures_20260310_235643/: report.md
meeting/: meeting_0305.md  todo_0305.md
meeting/0305/: meeting_0305.md  new_structure_0305.md
meeting/0319/: fixture_speedup_depth_pop_grid.md  fixture_speedup_depth_sweep.md  kernel_bucket_experiment.md  (+1 more)
scripts/: fetch_psb2_datasets.py  kernel_bucket_experiment.py  run_all_fixtures.sh  run_cpu_gpu_speedup_experiment.sh  run_experiment_plan.py  run_gpu_command.sh  run_triplet_checks.sh  speedup_experiment.example.json  speedup_experiment.json  speedup_experiment.py
spec/: builtins.md  builtins_base_v1_0.md  builtins_runtime_v1_0.md  builtins_v1_0.md  bytecode_format_v0_1.md  bytecode_format_v1_0.md  bytecode_isa.md  bytecode_isa_v1_0.md  fitness_v1_0.md  grammar_v1_0.md  subset_v0_1.md  subset_v1_0.md
tools/: audit_psb2_tasks.py  bench_fitness_fixture_cpu_gpu.py  check_fitness_fixture_cpu_gpu.py  check_multi_fixture_cpu_gpu.py  compare_interp_vm_py_cpp.py  compare_vm_py_cpp_fixtures.py  compare_vm_py_gpu_fixtures.py  convert_psb1_to_fitness_cases.py  convert_psb2_to_fitness_cases.py  convert_psb_to_fitness_cases.py  fetch_psb1_datasets.py  fetch_psb_datasets.py  gen_bytecode_fixture_set.py  gen_fitness_multi_bench_inputs.py  gen_gpu_batch_cases.py  gen_psb2_fitness_multi_bench_inputs.py  generate_array_fixtures.py  run_cpp_evolution.py  run_cpu_gpu_speedup_experiment.sh  run_evolution.py  run_psb2_all_tasks.py  run_simple_cpu_gpu_validation.py  run_v1_release_gate.py
(+71 files in other folders)
